--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SMOVIE</title>
+    <title>FlickMood</title>
     <script src="https://www.youtube.com/iframe_api"></script>
   </head>
   <body>
