--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/image/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlickMood</title>
     <script src="https://www.youtube.com/iframe_api"></script>
